# une

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/credit_alliance/: README.md  core.py  dna.py  game_theory.py  hub.py  joule_ledger.py  mesh.py  payout.py  redistribute.py
computational_flow/: drill_scheduler.sh  extract_seed.py  fusion_core.py  fusion_sensor_wrapper.py  knowledge_graph.json
docs/: axioms.md  hypothesis.md  postulates.md
examples/: visualize_efficiency.py
foundation/: foundation_of_axioms.json
scripts/: start_server.sh
src/une/: axioms.py  core_equations.py  dense.py  foundation_calc.py  physics.py  quantum_sim.py  stabilizer.py  test_fixtures.py  test_foundation.py  test_hypothesis.py  une_atomic_library.py
src/une/cli/: __init__.py
tools/: log_lesson.sh  stamp_snapshot.sh  verify_ots.sh
wisdom/: expand_elements.py  wisdom_corpus.json  wisdom_query.py
